--- a/index.html
+++ b/index.html
@@ -4,108 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Taurus Unfiltered</title>
-  <style>
-    body {
-      background: #f5f1e9;
-      color: #4a3c31;
-      font-family: 'Georgia', serif;
-      max-width: 600px;
-      margin: 2rem auto;
-      padding: 1rem;
-      text-align: center;
-    }
-    h1 {
-      font-weight: 900;
-      font-size: 2.5rem;
-      margin-bottom: 0.2rem;
-      color: #a15e3a;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-    .quote {
-      font-size: 1.2rem;
-      margin: 1.5rem 0;
-      font-style: italic;
-      min-height: 60px;
-    }
-    select {
-      font-size: 1rem;
-      padding: 0.5rem;
-      margin-top: 1rem;
-    }
-    .roast {
-      margin-top: 1rem;
-      font-weight: 700;
-      color: #80331a;
-      min-height: 40px;
-    }
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #a15e3a;
-      font-style: italic;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Taurus Unfiltered</h1>
-  <div class="quote" id="dailyQuote">Loading today's Taurus wisdom...</div>
+  <div class="page">
+    <h1>Taurus Unfiltered</h1>
 
-  <label for="signSelect">Pick your sign (Taurus won't judge):</label><br />
-  <select id="signSelect">
-    <option value="" selected disabled>Choose your sign</option>
-    <option value="Aries">Aries</option>
-    <option value="Taurus">Taurus</option>
-    <option value="Gemini">Gemini</option>
-    <option value="Cancer">Cancer</option>
-    <option value="Leo">Leo</option>
-    <option value="Virgo">Virgo</option>
-    <option value="Libra">Libra</option>
-    <option value="Scorpio">Scorpio</option>
-    <option value="Sagittarius">Sagittarius</option>
-    <option value="Capricorn">Capricorn</option>
-    <option value="Aquarius">Aquarius</option>
-    <option value="Pisces">Pisces</option>
-  </select>
+    <div class="content">
+      <p class="description">
+        Your daily reality check, delivered by the most brutally honest zodiac sign.
+        Taurus doesn’t sugarcoat. Taurus doesn’t lie. Taurus doesn’t care if it hurts.
+      </p>
 
-  <div class="roast" id="signRoast"></div>
+      <section class="section">
+        <h2>Today’s Quote</h2>
+        <div class="quote" id="dailyQuote">Loading Taurus truth...</div>
+      </section>
+
+      <section class="section">
+
+        <h2>Choose Your Sign — If You Dare</h2>
+        <p>Taurus has something to say — even if you’re not ready to hear it.</p>
+        <div class="signs" id="signsContainer"></div>
+        <div class="roast" id="signRoast"></div>
+      </section>
+
+
+    </div>
+  </div>
 
   <footer>Sincerely Taurus</footer>
 
-  <script>
-    async function loadDailyHoroscope() {
-      try {
-        const res = await fetch('dailyHoroscopes.json');
-        const data = await res.json();
-
-        // Get today's date in YYYY-MM-DD format
-        const today = new Date().toISOString().slice(0, 10);
-
-        const todayEntry = data[today];
-        const quoteEl = document.getElementById('dailyQuote');
-        const roastEl = document.getElementById('signRoast');
-        const signSelect = document.getElementById('signSelect');
-
-        if (!todayEntry) {
-          quoteEl.textContent = "Taurus is quiet today... come back tomorrow.";
-          return;
-        }
-
-        quoteEl.textContent = todayEntry.quote;
-
-        // When user selects a sign, show that sign's roast or advice
-        signSelect.addEventListener('change', () => {
-          const sign = signSelect.value;
-          const roast = todayEntry.signRoasts[sign];
-          roastEl.textContent = roast || "Taurus has nothing to say about that sign today.";
-        });
-      } catch (e) {
-        document.getElementById('dailyQuote').textContent = "Error loading Taurus wisdom.";
-        console.error(e);
-      }
-    }
-
-    loadDailyHoroscope();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
