--- a/index.html
+++ b/index.html
@@ -2,39 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Taurus Unfiltered</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="page">
-    <h1>Taurus Unfiltered</h1>
+  <header class="site-header">
+    <nav>
+      <ul>
+        <li><a href="#story">Story</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- Background Video -->
+  <video id="scrollVideo" autoplay muted playsinline></video>
 
-    <div class="content">
+  <!-- Scrollable Content -->
+  <div class="title-section">
+      <h1 class="title">Taurus Unfiltered</h1>
       <p class="description">
-        Your daily reality check, delivered by the most brutally honest zodiac sign.
+        Your daily reality check, delivered by the most brutally honest zodiac sign.<br>
         Taurus doesn’t sugarcoat. Taurus doesn’t lie. Taurus doesn’t care if it hurts.
       </p>
+      <div class="scroll-indicator">↓</div>
 
-      <section class="section">
-        <h2>Today’s Quote</h2>
-        <div class="quote" id="dailyQuote">Loading Taurus truth...</div>
-      </section>
-
-      <section class="section">
-
-        <h2>Choose Your Sign — If You Dare</h2>
-        <p>Taurus has something to say — even if you’re not ready to hear it.</p>
-        <div class="signs" id="signsContainer"></div>
-        <div class="roast" id="signRoast"></div>
-      </section>
-
-
-    </div>
+  </div>
+  <div class="quote-section">
+      <h1 class="title">Today’s Quote</h1>
+      <p class="quote" id="dailyQuote">Loading Taurus truth...</p>
+      <div class="scroll-indicator">↓</div>
   </div>
 
-  <footer>Sincerely Taurus</footer>
+  <div class="sign-section">
 
+    <h1 class="title">Choose Your Sign</h1>
+    <p class="dare">Taurus has something to say. Even if you’re not ready to hear it.</p>
+    <div class="signs" id="signsContainer"></div>
+    <div class="roast" id="signRoast"></div>
+    <footer>
+      <img src="images/signature.png" alt="Taurus Signature" id="signature">
+    </footer>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
