--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav>
       <ul>
         <li><a href="#story">Story</a></li>
+        <li><a href="https://patreon.com/taurusunfiltered">Patreon</a></li>
         <li><a href="#reviews">Reviews</a></li>
       </ul>
     </nav>
