--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="site-header">
     <nav>
       <ul>
-        <li><a href="#story">Story</a></li>
+        <li><a href="https://www.royalroad.com/fiction/140380/anti-hero">Story</a></li>
         <li><a href="https://patreon.com/taurusunfiltered">Patreon</a></li>
         <li><a href="#reviews">Reviews</a></li>
       </ul>
